<resources>
    <string name="app_name">Homework_17</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="log_out">Log Out</string>
    <string name="email_placeholder">Email Placeholder</string>
</resources>